# 476-project

./: .gitignore  CMakeLists.txt  FindGfxLibs.cmake
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
particles/: Particle.cpp  Particle.h  particleGen.cpp  particleGen.h
resources/: Walking.fbx  assimp_tex_frag.glsl  assimp_tex_vert.glsl  depth_frag.glsl  depth_fragDebug.glsl  depth_vert.glsl  depth_vertDebug.glsl  hud_frag.glsl  hud_vert.glsl  particle_frag.glsl  particle_vert.glsl  pass_texfrag.glsl  pass_vert.glsl  red_flash_frag.glsl  red_flash_vert.glsl  shadow_frag.glsl  shadow_vert.glsl  simple_frag.glsl  simple_light_frag_enemy.glsl  simple_vert.glsl  stickfigure_anim.fbx  tex_vert.glsl  wolf2.fbx
resources/Barrel/: Barrel.fbx
resources/CatWizard/: BlendWalk.fbx  BlendWalkFix.fbx  BlendWalkFix1.fbx  BlendWalkFix2.fbx  CatWIzardWIthRoot.fbx  CatWalk.fbx  CatWizardAnimation.fbx  CatWizardAnimation2.fbx  CatWizardAnimationFixed.fbx  CatWizardAnimationMay.fbx  CatWizardMeshOnly.fbx  CatWizardNoTex.fbx  CatWizardOrange.fbx
resources/IceElemental/: IceElem.fbx
resources/Idle/: Idle.fbx
resources/Shaders/: cube_frag.glsl  cube_vert.glsl  particle_frag.glsl  particle_vert.glsl  simple_light_frag.glsl  simple_light_vert.glsl  simple_vert.glsl  solid_frag.glsl  tex_frag0.glsl
resources/Vanguard/: Vanguard.fbx
resources/Walking2/: Vanguard.fbx
resources/cluster_assets/candelabrum/: Candelabrum.mtl
resources/cornerCube/: cornerCube.fbx  cornerCubeLeather.fbx  cornerCubePaper.fbx  sideCube.fbx
src/: Animation.cpp  Animation.h  Animator.cpp  Animator.h  AssimpGLMHelpers.h  AssimpMesh.cpp  AssimpMesh.h  AssimpModel.cpp  AssimpModel.h  Bone.cpp  Bone.h  BookshelfManager.h  BossEnemy.cpp  BossEnemy.h  BossRoomGen.cpp  BossRoomGen.h  Config.h  Delaunay2D.cpp  Delaunay2D.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  FrustumCulling.h  GameObjectTypes.h  Grid.h  IceElemental.cpp  IceElemental.h  LibraryGen.cpp  LibraryGen.h  LightTrail.h  MatrixStack.h  Pathfinder.cpp  Pathfinder.h  Player.cpp  Player.h  Program.cpp  Program.h  Spell.c  Spell.cpp  (+4 more)
